<resources>
    <string name="app_name">Project3post</string>

    <string name="nol">0</string>
    <string name="satu">1</string>
    <string name="dua">2</string>
    <string name="tiga">3</string>
    <string name="empat">4</string>
    <string name="lima">5</string>
    <string name="enam">6</string>
    <string name="tujuh">7</string>
    <string name="delapan">8</string>
    <string name="sembilan">9</string>
    <string name="sepuluh">10</string>

    <string name="C">C</string>
    <string name="pangkat">^</string>
    <string name="kurung">( )</string>
    <string name="kali">x</string>
    <string name="bagi">÷</string>
    <string name="tambah">+</string>
    <string name="kurang">-</string>
    <string name="titik">.</string>
    <string name="hasil">=</string>
    <string name="pangkat2">x2</string>
    <string name="plusminus">+/-</string>
    <string name="hapus">hapus</string>
    <string name="persen">%</string>

    <string name="display">Masukkan Nilai</string>

    <string name="andi">Andififian</string>
</resources>