<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#251D3A"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal"
        android:layout_weight="0.3">
        <TextView
            android:id="@+id/displayhasil"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text=""
            android:textAlignment="viewEnd"

            android:textColor="@color/white"
            android:textSize="50sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.2">
        <Button
            android:id="@+id/buttonclear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/C"
            android:layout_weight="0.5"
            android:textSize="20sp"
            android:backgroundTint="@android:color/holo_red_light"
            android:layout_margin="1dp"/>
        <Button
            android:id="@+id/buttonpersen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/persen"
            android:layout_weight="0.5"
            android:textSize="20sp"
            android:backgroundTint="#E04D01"
            android:layout_margin="1dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.2">
        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tujuh"
            android:layout_weight="0.25"
            android:textSize="20sp"
            android:backgroundTint="#FF7700"
            android:layout_margin="1dp"/>
        <Button
            android:id="@+id/button8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/delapan"
            android:layout_weight="0.25"
            android:textSize="20sp"
            android:backgroundTint="#FF7700"
            android:layout_margin="1dp"/>
        <Button
            android:id="@+id/button9"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/sembilan"
            android:layout_weight="0.25"
            android:textSize="20sp"
            android:backgroundTint="#FF7700"
            android:layout_margin="1dp"/>
        <Button
            android:id="@+id/buttonbagi"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/bagi"
            android:layout_weight="0.25"
            android:textSize="20sp"
            android:backgroundTint="#E04D01"
            android:layout_margin="1dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.2">
        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/empat"
            android:layout_weight="0.25"
            android:textSize="20sp"
            android:backgroundTint="#FF7700"
            android:layout_margin="1dp"/>
        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/lima"
            android:layout_weight="0.25"
            android:textSize="20sp"
            android:backgroundTint="#FF7700"
            android:layout_margin="1dp"/>
        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/enam"
            android:layout_weight="0.25"
            android:textSize="20sp"
            android:backgroundTint="#FF7700"
            android:layout_margin="1dp"/>
        <Button
            android:id="@+id/buttonkali"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/kali"
            android:layout_weight="0.25"
            android:textSize="20sp"
            android:backgroundTint="#E04D01"
            android:layout_margin="1dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.2">
        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/satu"
            android:layout_weight="0.25"
            android:textSize="20sp"
            android:backgroundTint="#FF7700"
            android:layout_margin="1dp"/>
        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/dua"
            android:layout_weight="0.25"
            android:textSize="20sp"
            android:backgroundTint="#FF7700"
            android:layout_margin="1dp"/>
        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tiga"
            android:layout_weight="0.25"
            android:textSize="20sp"
            android:backgroundTint="#FF7700"
            android:layout_margin="1dp"/>
        <Button
            android:id="@+id/buttonkurang"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/kurang"
            android:layout_weight="0.25"
            android:textSize="20sp"
            android:backgroundTint="#E04D01"
            android:layout_margin="1dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.2">
        <Button
            android:id="@+id/buttonhasil"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/hasil"
            android:layout_weight="0.25"
            android:textSize="20sp"
            android:backgroundTint="@android:color/holo_red_light"
            android:layout_margin="1dp"/>
        <Button
            android:id="@+id/button0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/nol"
            android:layout_weight="0.25"
            android:textSize="20sp"
            android:backgroundTint="#FF7700"
            android:layout_margin="1dp"/>
        <Button
            android:id="@+id/buttontitik"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/titik"
            android:layout_weight="0.25"
            android:textSize="20sp"
            android:backgroundTint="#E04D01"
            android:layout_margin="1dp"/>
        <Button
            android:id="@+id/buttontambah"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tambah"
            android:layout_weight="0.25"
            android:textSize="20sp"
            android:backgroundTint="#E04D01"
            android:layout_margin="1dp"
            />
    </LinearLayout>


</LinearLayout>